[package]
name = "unrest"
description = "PoC of async http framework"
version = "0.1.0"
authors = ["Evgeny Rozaliev <rozaliev@gmail.com>"]
license = "MIT"
repository = "https://github.com/rozaliev/unrest"

[dependencies]
futures = "^0.1.14"
hyper = "^0.11.1"
serde = "^1.0.10"
serde_json = "^1.0.2"
route-recognizer = "^0.1.12"
tokio-core = "^0.1.8"